--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -9,10 +9,12 @@
         <title>{{ title }} - Pleasant Tours</title>
     </head>
     <body>
-        {{ #navigation_bar }}
-        {{ /navigation_bar }}
+        {{#navigation_bar}}
+            navigation bar
+        {{/navigation_bar}}
         {{{ content }}}
-        {{ #footer }}
-        {{ /footer }}
+        {{#footer}}
+            footer
+        {{/footer}}
     </body>
 </html>
