--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -46,10 +46,12 @@
                                                     alt="" style="width:50px;height:50px" /></a>
                                         </div>
                                     </div>
-                                    <div class="rd-navbar-aside-right rd-navbar-collapse">
-                                        <a class="button button-md button-default-outline-2 button-ujarak" href="/authentication/log_in.php">Log In</a>
-                                        <a class="button button-md button-default-outline-2 button-ujarak" href="/authentication/sign_up.php">Sign Up</a>
-                                    </div>
+                                    {{^logged_in}}
+                                        <div class="rd-navbar-aside-right rd-navbar-collapse">
+                                            <a class="button button-md button-default-outline-2 button-ujarak" href="/authentication/log_in.php">Log In</a>
+                                            <a class="button button-md button-default-outline-2 button-ujarak" href="/authentication/sign_up.php">Sign Up</a>
+                                        </div>
+                                    {{/logged_in}}
                                 </div>
                             </div>
                             <div class="rd-navbar-main-outer">
