--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -52,6 +52,9 @@
                                             <a class="button button-md button-default-outline-2 button-ujarak" href="/authentication/sign_up.php">Sign Up</a>
                                         </div>
                                     {{/logged_in}}
+                                    {{#logged_in}}
+                                        <!-- account -->
+                                    {{/logged_in}}
                                 </div>
                             </div>
                             <div class="rd-navbar-main-outer">
