--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -76,7 +76,7 @@
             {{/navigation_bar}}
             {{{ content }}}
             {{#footer}}
-                <footer class="section footer-corporate context-dark">
+                <footer class="section footer-corporate context-dark" id="footer">
                     <div class="footer-corporate-inset">
                         <div class="container">
                             <div class="row row-40 justify-content-lg-between">
