--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -66,6 +66,10 @@
                                             </li>
                                             <li class="rd-nav-item"><a class="rd-nav-link" href="/tours.php">Tours</a>
                                             </li>
+                                            {{^logged_in}}
+                                                <li class="rd-nav-item"><a class="rd-nav-link" href="/about.php">About Us</a>
+                                                </li>
+                                            {{/logged_in}}
                                         </ul>
                                     </div>
                                 </div>
@@ -83,7 +87,7 @@
                                 <div class="col-sm-6 col-md-12 col-lg-3 col-xl-4">
                                     <div class="oh-desktop">
                                         <div class="wow slideInRight" data-wow-delay="0s">
-                                            <h6 class="text-spacing-100 text-uppercase">Contact us</h6>
+                                            <h6 class="text-spacing-100 text-uppercase">Contact Us</h6>
                                             <ul class="footer-contacts d-inline-block d-sm-block">
                                                 <li>
                                                     <div class="unit">
@@ -99,9 +103,10 @@
                                 <div class="col-sm-11 col-md-7 col-lg-5 col-xl-4">
                                     <div class="oh-desktop">
                                         <div class="wow slideInLeft" data-wow-delay="0s">
-                                            <h6 class="text-spacing-100 text-uppercase">Quick links</h6>
+                                            <h6 class="text-spacing-100 text-uppercase">Quick Links</h6>
                                             <ul class="row-6 list-0 list-marked list-marked-md list-marked-secondary list-custom-2">
-                                                <li><a href="/tours.php">Our Tours</a></li>
+                                                <li><a href="/">Home</a></li>
+                                                <li><a href="/tours.php">Tours</a></li>
                                                 <li><a href="/about.php">About Us</a></li>
                                             </ul>
                                         </div>
