--- a/main/templates/authentication.html
+++ b/main/templates/authentication.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" type="image/png" href="/static/assets/images/logo.png">
-        <link rel="stylesheet" href="/static/frontend/css/authentication_fonts.css">
-        <link rel="stylesheet" href="/static/frontend/css/authentication_style.css">
-        <title>{{ title }} - Pleasant Tours</title>
-    </head>
-    <body>
-        <div class="main">
-            <div class="container">
-                {{{ content }}}
-            </div>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/png" href="/static/assets/images/logo.png">
+    <link rel="stylesheet" href="/static/frontend/css/authentication_fonts.css">
+    <link rel="stylesheet" href="/static/frontend/css/authentication_style.css">
+    {{{ style }}}
+    <title>{{ title }} - Pleasant Tours</title>
+</head>
+
+<body>
+    <div class="main">
+        <div class="container">
+            {{{ content }}}
         </div>
-    </body>
+    </div>
+</body>
+
 </html>
