--- a/main/templates/regular.html
+++ b/main/templates/regular.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" type="image/png" href="/static/assets/images/logo.png">
         <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Montserrat:400,500,600,700%7CPoppins:400%7CTeko:300,400">
+        <link rel="stylesheet" href="/static/frontend/css/dropdown.css">
         <link rel="stylesheet" href="/static/frontend/css/bootstrap.css">
         <link rel="stylesheet" href="/static/frontend/css/main_fonts.css">
         <link rel="stylesheet" href="/static/frontend/css/main_style.css">
