--- a/main/templates/authentication.html
+++ b/main/templates/authentication.html
@@ -5,9 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" type="image/png" href="/static/assets/images/logo.png">
-        <link rel="stylesheet" href="/static/frontend/css/dropdown.css">
         <link rel="stylesheet" href="/static/frontend/css/authentication_fonts.css">
         <link rel="stylesheet" href="/static/frontend/css/authentication_style.css">
+        {{{ resources }}}
         <title>{{ title }} - Pleasant Tours</title>
     </head>
     <body>
