--- a/main/templates/regular.html
+++ b/main/templates/regular.html
@@ -46,7 +46,7 @@
                                             <!--Brand--><a class="brand" href="#"><img src="/static/assets/images/logo.png"
                                                     alt="" style="width:35px;height:35px" /></a>
                                         </div>
-                                        <a href="#">Pleasant Tours</a>
+                                        <a href="/">Pleasant Tours</a>
                                     </div>
                                     <div class="rd-navbar-aside-right rd-navbar-collapse">
                                         {{^logged_in}}
