--- a/main/templates/regular.html
+++ b/main/templates/regular.html
@@ -76,6 +76,8 @@
                                             {{^logged_in}}
                                                 <li class="rd-nav-item"><a class="rd-nav-link" href="/about.php">About Us</a>
                                                 </li>
+                                                <li class="rd-nav-item"><a class="rd-nav-link" href="/contact.php">Contact Us</a>
+                                                </li>
                                             {{/logged_in}}
                                         </ul>
                                     </div>
@@ -98,9 +100,22 @@
                                             <ul class="footer-contacts d-inline-block d-sm-block">
                                                 <li>
                                                     <div class="unit">
+                                                        <div class="unit-left"><span class="icon fa fa-phone"></span></div>
+                                                        <div class="unit-body"><a class="link-phone" href="tel:1800 1141">1800 1141</a></div>
+                                                    </div>
+                                                </li>
+                                                <li>
+                                                    <div class="unit">
                                                         <div class="unit-left"><span class="icon fa fa-envelope"></span></div>
                                                         <div class="unit-body"><a class="link-aemail"
                                                                 href="mailto:pgood8471@gmail.com">pgood8471@gmail.com</a></div>
+                                                    </div>
+                                                </li>
+                                                <li>
+                                                    <div class="unit">
+                                                        <div class="unit-left"><span class="icon fa fa-location-arrow"></span>
+                                                        </div>
+                                                        <div class="unit-body"><a class="link-location" href="https://goo.gl/maps/w24MCzmGU1HuQtFSA">285 Doi Can, Vinh Phu, Ba Dinh, Hanoi 100000</a></div>
                                                     </div>
                                                 </li>
                                             </ul>
@@ -115,6 +130,7 @@
                                                 <li><a href="/">Home</a></li>
                                                 <li><a href="/tours.php">Tours</a></li>
                                                 <li><a href="/about.php">About Us</a></li>
+                                                <li><a href="/contact.php">Contact Us</a></li>
                                             </ul>
                                         </div>
                                     </div>
