--- a/main/templates/regular.html
+++ b/main/templates/regular.html
@@ -71,7 +71,7 @@
                                         <ul class="rd-navbar-nav">
                                             <li class="rd-nav-item"><a class="rd-nav-link" href="/">Home</a>
                                             </li>
-                                            <li class="rd-nav-item"><a class="rd-nav-link" href="/tours.php">Tours</a>
+                                            <li class="rd-nav-item"><a class="rd-nav-link" href="/tours/list.php">Tours</a>
                                             </li>
                                             {{^logged_in}}
                                                 <li class="rd-nav-item"><a class="rd-nav-link" href="/about.php">About Us</a>
@@ -128,7 +128,7 @@
                                             <h6 class="text-spacing-100 text-uppercase">Quick Links</h6>
                                             <ul class="row-6 list-0 list-marked list-marked-md list-marked-secondary list-custom-2">
                                                 <li><a href="/">Home</a></li>
-                                                <li><a href="/tours.php">Tours</a></li>
+                                                <li><a href="/tours/list.php">Tours</a></li>
                                                 <li><a href="/about.php">About Us</a></li>
                                                 <li><a href="/contact.php">Contact Us</a></li>
                                             </ul>
