--- a/main/templates/regular.html
+++ b/main/templates/regular.html
@@ -54,7 +54,7 @@
                                             <a class="button button-md button-default-outline-2 button-ujarak" href="/authentication/sign_up.php">Sign Up</a>
                                         {{/logged_in}}
                                         {{#logged_in}}
-                                            <div style="display:flex;margin-right:-30px">
+                                            <div style="display:flex;margin-right:-30px"> <!-- TODO: change password + delete account -->
                                                 <span>Welcome back,</span>
                                                 <a href="#" style="margin-left:5px">{{ username }}</a>
                                                 <span>!</span>
