--- a/main/templates/regular.html
+++ b/main/templates/regular.html
@@ -79,7 +79,7 @@
                                                 </li>
                                             {{/logged_in}}
                                             {{#logged_in}}
-                                                <li class="rd-nav-item"><a class="rd-nav-link" href="/account/settings.php">Settings</a>
+                                                <li class="rd-nav-item"><a class="rd-nav-link" href="/account/settings.php" target="_blank">Settings</a>
                                                 </li>
                                             {{/logged_in}}
                                         </ul>
